# logchain

./: Cargo.toml  README.md
.logchain/logs/: 2025-04-27.json  2025-04-29.json  2025-05-03.json
logchain/logs/: 2025-04-29.json  2025-05-03.json  README.md
logs/: 2025-04-25.json
src/: cli_parse.rs  config.rs  log.rs  main.rs
